--- a/bootstrap.html
+++ b/bootstrap.html
@@ -9,7 +9,7 @@
                  
     </head>
 <!--fijfijij-->
-    <body class="bg-#FF4511">
+    <body class="bg-danger">
 <div class="container-fluid ">
     <img src="/actor.jpg">
 </div>
